# sdp-powered-by-ai-agents-stefan-mitic

./: .env.example  .gitignore  .pre-commit-config.yaml  DEMO.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs-deploy.yml
.kiro/agents/: architecture-agent.json  cicd-agent.json  git-agent.json  requirements-agent.json  tdd-bdd-agent.json  tdd-bdd-prompt.md
architecture/: 01-introduction-and-goals.md  03-system-scope-and-context.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  09-architecture-decisions.md  12-glossary.md
architecture/diagrams/: c4-01-system-context.puml  c4-03-components-post.puml  c4-04-components-feed.puml  seq-01-publish-post.puml  seq-02-read-feed.puml  seq-03-direct-message.puml
docs/: Makefile  README.md  conf.py  ddd-ubiquitous-language.md  docs-deploy.yml  index.rst  pareto-backlog.md  requirements.txt
docs/architecture/: 02-constraints.md  03-system-scope-and-context.md  04-solution-strategy.md  05-building-block-view.md  (+7 more)
migrations/: 001_initial.sql
scripts/: seed.py
src/: api.py  app.py  auth.py  db.py  exceptions.py  feed.py  messaging.py  notification.py  post.py  user.py  worker.py
static/: index.html
tests/: conftest.py  test_api.py  test_auth.py  test_db.py  test_exceptions.py  test_feed.py  test_frontend_security.py  test_http_health.py  test_http_user.py  test_integration.py  test_messaging.py  test_notification.py  test_post.py  test_user.py  test_user_register.py  test_worker.py
(+22 files in other folders)
