# Tool configuration for black, isort, ruff, bandit, and detect-secrets
[project]
name = "sdp-course"
version = "0.1.0"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/api.py" = ["B008"]  # FastAPI Depends() in default args is intentional

[tool.bandit]
exclude_dirs = ["tests"]
